-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0, Lustre 2.12.3
-
None
-
3
-
9223372036854775807
Looking around my logs noticed this:
== replay-vbr test 1b: open (O_CREAT) checks version of parent ======================================= 17:17:44 (1566163064) Starting client: oleg230-client.virtnet: -o user_xattr,flock oleg230-server@tcp:/lustre /mnt/lustre2 mount.lustre: according to /etc/mtab oleg230-server@tcp:/lustre is already mounted on /mnt/lustre2 oleg230-server: error: set_param: param_path 'mdd/lustre-MDT0000/sync_permission': No such file or directory pdsh@oleg230-client: oleg230-server: ssh exited with exit code 2
Some digging around reveals the the setting is actually named
LUSTRE_RW_ATTR(sync_perm);
not sure what's up with the double mount attempt, probably a separate issue.